Deploy-ready: Streamlit Cloud config + favicon + syntax fixes
- Fixed app.py syntax error (broken JS block removed cleanly)
- Added .streamlit/config.toml (dark theme, headless server)
- Added runtime.txt (Python 3.11)
- Added packages.txt (chromium for Playwright scraping)
- Added praw to requirements.txt
- Updated .gitignore (exclude playwright browser binaries)
- Added static/ directory for favicon.ico

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Thumbs.db
 # IDE
 .vscode/
 .idea/
+
+# Playwright browser binaries (installed at runtime on cloud)
+playwright_browsers/
+ms-playwright/
